<resources>
    <string name="app_name">FusionCharge</string>
    <string name="double_press_for_exit">再次点击返回退出程序</string>
    <string name="hint_key_total">共</string>
    <string name="hint_key_electronic_pile">个充电桩</string>
    <string name="hint_key_electronic_gun">个充电枪</string>
    <string name="km">KM</string>
    <string name="yuan">元</string>
    <string name="yuan_du">元&#047;度</string>
    <string name="du">度</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="action_get_code">获取验证码</string>
    <string name="action_get_code_again">重新获取验证码</string>
    <string name="action_get_message_code">获取短信验证码</string>
    <string name="action_next">下一步</string>
    <string name="action_submit">提交</string>
    <string name="action_confirm">确定</string>
    <string name="action_photo">相机</string>
    <string name="action_gallery">照片</string>
    <string name="action_cancel">取消</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="action_send_comment">发表评价</string>
    <string name="action_reply">回复</string>
    <string name="action_appointment">预约</string>
    <string name="action_complete_appointment">完成预约</string>
    <string name="action_go">直接前往</string>
    <string name="action_guild">开始导航</string>
    <string name="action_cancel_appointment">取消预约</string>
    <string name="action_re_appointment">重新预约</string>
    <string name="action_change_map">切换园区地图</string>
    <string name="action_start_charge">开始充电</string>
    <string name="action_end_and_pay">结束并且支付</string>
    <string name="action_confirm_pay">确认支付</string>
    <string name="action_send_comment_">发布评论</string>
    <string name="action_reset">重置</string>
    <string name="statue">状态</string>
    <string name="statue_free">空闲</string>
    <string name="statue_busy">繁忙</string>
    <string name="statue_charging_pile_open">对外开放</string>
    <string name="statue_online">离线</string>
    <string name="statue_offline">在线</string>
    <string name="statue_direct_electronic">直流</string>
    <string name="statue_alternating_electronic">交流</string>
    <string name="hint">提示</string>
    <string name="hint_input_phone">请输入手机号</string>
    <string name="input_correct_phone">请输入正确的手机号</string>
    <string name="hint_input_code">请输入验证码</string>
    <string name="hint_input_code_6">请输入6位验证码</string>
    <string name="choice_appointment">请同意用户协议</string>
    <string name="code_incorrect">验证码格式不正确</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_message_code">请输入短信中的验证码</string>
    <string name="hint_input_new_password">输入新密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_input_search_key">输入关键词查询</string>
    <string name="hint_input_device_num">请输入设备号</string>
    <string name="code_error_hint">错误提示：</string>
    <string name="hint_input_content">请输入内容</string>
    <string name="hint_input_right_email">请输入正确的邮箱</string>
    <string name="hint_right_code">请输入正确的二维码</string>
    <string name="hint_error_data">错误数据</string>
    <string name="hint_vin">车辆识别号码必须是17位字母和数字组合</string>
    <string name="login">登录</string>
    <string name="login_type_phone">手机号登录</string>
    <string name="login_type_worker">员工账号登录</string>
    <string name="login_type_code">验证码登录</string>
    <string name="login_regist_account">注册账号</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_error">登录失败</string>
    <string name="register_login">已注册，立即登录</string>
    <string name="regist">注册</string>
    <string name="regist_password_hint">6-12位，必须是字母+数字+特殊符号等</string>
    <string name="regist_appointment">我已阅读，并同意</string>
    <string name="regist_appointment_1">《用户注册协议》</string>
    <string name="reset_password">重置密码</string>
    <string name="reset_password_hint">验证码已经发送到您的手机</string>
    <string name="reset_password_no_message">未收到短信验证码？</string>
    <string name="reset_password_input_password">输入密码</string>
    <string name="user_info_title">个人信息</string>
    <string name="user_info_name">姓名</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_man">男</string>
    <string name="user_info_female">女</string>
    <string name="user_info_unknown">未知</string>
    <string name="user_info_nick_name">昵称</string>
    <string name="user_info_write_nick">请填写昵称</string>
    <string name="user_info_email">邮箱</string>
    <string name="user_info_birthday">出生日期</string>
    <string name="user_info_address">地址</string>
    <string name="user_info_department">部门</string>
    <string name="user_info_phone">电话</string>
    <string name="user_info_no">工号</string>
    <string name="user_info_type">用户类型</string>
    <string name="user_info_w3_account">w3账号</string>
    <string name="user_info_alter_photo">修剪照片</string>
    <string name="home_map">地图</string>
    <string name="home_list">列表</string>
    <string name="home_direct_electronic">直流电</string>
    <string name="home_alternating_electronic">交流电</string>
    <string name="home_go_pay">去支付</string>
    <string name="home_go_charger">去充电</string>
    <string name="home_not_pay_hint">您有一个交易订单未支付</string>
    <string name="home_start_charging">您的汽车正在充电请勿拔掉</string>
    <string name="home_charging">您的车正在充电</string>
    <string name="home_checking">正在检测充电安全</string>
    <string name="home_checked_fail">检测充电安全失败</string>
    <string name="home_chager_fee">充电费用</string>
    <string name="home_charging_fee_per">充电费：</string>
    <string name="home_charging_service_fee">服务费：</string>
    <string name="home_pay_style">支付方式：微信，支付宝</string>
    <string name="home_appointment_hint">您有一个预约请尽快前往</string>
    <string name="home_my_order">我的订单</string>
    <string name="home_my_account">我的账户</string>
    <string name="home_setmeal">购买套餐</string>
    <string name="home_my_appointment">我的预约</string>
    <string name="home_my_charge">我的充电</string>
    <string name="home_setting">设置</string>
    <string name="home_distance">距离（KM）</string>
    <string name="home_charge_type">方式</string>
    <string name="home_charge_direct">直流</string>
    <string name="home_charge_alternating">交流</string>
    <string name="home_charge_direct_">直流：</string>
    <string name="home_charge_alternating_">交流：</string>
    <string name="home_charge_hint_">个空闲</string>
    <string name="search_history">搜索历史</string>
    <string name="search_history_clear">清空搜索历史</string>
    <string name="charging_pile_detail">充电站详情</string>
    <string name="charging_pile_detail_">充电桩详情</string>
    <string name="charging_pile_pics">图片</string>
    <string name="charging_pile_position">桩位</string>
    <string name="charging_pile_comments">评论</string>
    <string name="charging_pile_no">电桩编号：</string>
    <string name="charging_pile_charging_fee">充电费：</string>
    <string name="charging_pile_service_fee">服务费：</string>
    <string name="charging_pile_max_power">最大功率：</string>
    <string name="charging_pile_max_electronic">最大电流：</string>
    <string name="charging_pile_max_voltage">最大电压：</string>
    <string name="charging_pile_appointment_warn">由于您恶意预约已超过三次\n您的账号已被锁定</string>
    <string name="score">分</string>
    <string name="electric_gun">充电枪：</string>
    <string name="appoint_charge_choice_time">选择时间</string>
    <string name="appoint_charge_choice_time_title">请选择合适的预约时间段</string>
    <string name="appoint_charge_choice_time_hint">温馨提示：请根据您的实际需要进行预约，恶意预约将受到使用限制</string>
    <string name="appoint_success">预约成功!</string>
    <string name="guilding">导航中</string>
    <string name="guilding_charging_pile_no">电桩编号</string>
    <string name="guilding_charging_pile_name">电桩名称</string>
    <string name="guilding_charging_gun">电枪编号</string>
    <string name="guilding_timeout">很抱歉</string>
    <string name="guilding_timeout_hint">您预置的预约时间已超时 请重新预约</string>
    <string name="guilding_reach_target">您已到达目的地附近！</string>
    <string name="guilding_park_map">园区地图</string>
    <string name="guilding_get_location">定位中，稍后再试...</string>
    <string name="guilding_no_end">终点未设置</string>
    <string name="guilding_cancel_appointment_hint">您确定要取消充电预约？</string>
    <string name="guilding_check_not_appointment">您导航目的地与预约中的目的地不同，是否继续导航？</string>
    <string name="scan_charging">充电</string>
    <string name="scan_charging_hint">将充电桩上的二维码放入框内，即可享受充电服务</string>
    <string name="scan_charging_change_keybord">切换至输入设备号充电</string>
    <string name="charging_detail">充电详情</string>
    <string name="charging_detail_place">充电点</string>
    <string name="charging_detail_no">充电桩编号：</string>
    <string name="charging_detail_fee">充电费</string>
    <string name="changing_detail_choice_gun">选择充电枪</string>
    <string name="changing_detail_choice_style">选择充电方式</string>
    <string name="changing_detail_style_electronic">按电量</string>
    <string name="changing_detail_style_money">按金额</string>
    <string name="changing_detail_style_time">按时间</string>
    <string name="changing_detail_style_full">充满</string>
    <string name="changing_detail_input_electronic">请输入充电度数</string>
    <string name="charging_statue">充电状态</string>
    <string name="charging_statue_checking">正在检测安全性....</string>
    <string name="charging_statue_hint">您确定要结束充电去支付？</string>
    <string name="charging_statue_device_offline">充电设备离线</string>
    <string name="charging_statue_electronic">已充电量</string>
    <string name="charging_statue_fee">充电费用</string>
    <string name="charging_statue_a">电流(A)</string>
    <string name="charging_statue_v">电压(V)</string>
    <string name="charging_statue_kw">功率(KW)</string>
    <string name="charging_statue_current">当前电量</string>
    <string name="charging_statue_soc">SOC</string>
    <string name="charging_statue_fail">开始充电失败</string>
    <string name="charging_statue_please_check">请检查桩与车的连接状态....</string>
    <string name="charging_statue_ending">正在结束充电，请耐心等待....</string>
    <string name="portrait">头像</string>
    <string name="sex">性别</string>
    <string name="email">邮箱</string>
    <string name="birthday">出生日期</string>
    <string name="address">地址</string>
    <string name="car_vin">汽车VIN</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_help">使用帮助</string>
    <string name="setting_version">当前版本</string>
    <string name="setting_new_version">检测到有新版本</string>
    <string name="setting_advice">意见反馈</string>
    <string name="setting_exit">退出</string>
    <string name="setting_login_out">注销账户</string>
    <string name="setting_clause">版权声明与免责条款</string>
    <string name="write_birthday">填写生日</string>
    <string name="write_address">填写地址</string>
    <string name="apply_invoice_detail">发票详情</string>
    <string name="apply_invoice_style">抬头类型</string>
    <string name="apply_invoice_company">企业单位</string>
    <string name="apply_invoce_people">个人/企业单位</string>
    <string name="apply_invoice_title">发票抬头</string>
    <string name="apply_invoice_title_hint">填写发票抬头</string>
    <string name="apply_invoice_tax">税号</string>
    <string name="apply_invoice_tax_hint">请填写税号</string>
    <string name="apply_invoice_content">发票内容</string>
    <string name="apply_invoice_content_">*运输服务*客运服务费</string>
    <string name="apply_invoice_money">发票金额</string>
    <string name="apply_invoice_more_info">更多信息</string>
    <string name="apply_invoice_more_info_hint">填写备注（非必填）</string>
    <string name="apply_invoice_receive_method">接受方式</string>
    <string name="apply_invoice_receive">收件人</string>
    <string name="apply_invoice_receive_hint">填写收件人</string>
    <string name="apply_invoice_connect">联系电话</string>
    <string name="apply_invoice_connect_hint">填写联系电话</string>
    <string name="apply_invoice_detail_address">详细地址</string>
    <string name="apply_invoice_detail_address_hint">填写详细地址</string>
    <string name="apply_invoice_email">电子邮箱</string>
    <string name="apply_invoice_email_hint">填写电子邮箱</string>
    <string name="apply_invoice_postage_hint">开票金额不足200元，需支付邮费</string>
</resources>